feat: More general save_to

--- a/misc/config2py - demo.ipynb
+++ b/misc/config2py - demo.ipynb
@@ -11,6 +11,18 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
+                "# Use cases"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": []
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
                 "# The cherry on top"
             ]
         },
@@ -356,7 +368,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "# user_gettable"
+                "# `user_gettable`"
             ]
         },
         {
@@ -401,6 +413,164 @@
             "metadata": {},
             "outputs": [],
             "source": []
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "# `simple_config_getter`"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 1,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "(configs_src: str = '/Users/thorwhalen/.config/config2py/configs'\n",
+                        " *\n",
+                        " first_look_in_env_vars: bool = True\n",
+                        " ask_user_if_key_not_found: bool = False\n",
+                        " config_store_factory: Callable = <function get_configs_local_store at 0x1079770a0>)\n"
+                    ]
+                }
+            ],
+            "source": [
+                "from config2py import simple_config_getter, get_configs_local_store\n",
+                "from i2 import Sig\n",
+                "\n",
+                "print(*str(Sig(simple_config_getter)).split(','), sep='\\n')"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 2,
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "TextFiles(rootdir='/Users/thorwhalen/.config/config2py/configs', subpath='', pattern_for_field=None, max_levels=None, include_hidden=False, assert_rootdir_existence=False)"
+                        ]
+                    },
+                    "execution_count": 2,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "config_getter = simple_config_getter()\n",
+                "config_getter.configs"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 11,
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "[]"
+                        ]
+                    },
+                    "execution_count": 11,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "list(config_getter.configs)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 14,
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "'/Users/thorwhalen'"
+                        ]
+                    },
+                    "execution_count": 14,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "config_getter('HOME')  # config_getter looks in env var first"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 11,
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "TextFiles(rootdir='/Users/thorwhalen/.config/opus/configs', subpath='', pattern_for_field=None, max_levels=None, include_hidden=False, assert_rootdir_existence=False)"
+                        ]
+                    },
+                    "execution_count": 11,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "# want to have a local store for a given app\n",
+                "\n",
+                "config_getter = simple_config_getter('opus')\n",
+                "config_getter.configs"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 13,
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "<configparser.ConfigParser object at 0x107833760>"
+                        ]
+                    },
+                    "execution_count": 13,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "config_getter = simple_config_getter(\n",
+                "    'SOMEPATH.ini' \n",
+                ")\n",
+                "config_getter.configs"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": []
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# config_getter.configs['oto_sharedpoint']['title']\n",
+                "# # other possibilities\n",
+                "\n",
+                "# config_getter.configs['oto_sharedpoint.title']\n",
+                "# config_getter.configs['title']"
+            ]
         }
     ],
     "metadata": {
