feat: is_repl and consequences

--- a/misc/config2py - demo.ipynb
+++ b/misc/config2py - demo.ipynb
@@ -23,7 +23,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "# The cherry on top"
+                "# The cherry on top: `config_getter`"
             ]
         },
         {
@@ -32,7 +32,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "from config2py import repl_config_getter"
+                "from config2py import config_getter"
             ]
         },
         {
@@ -43,8 +43,10 @@
                 "\n",
                 "What `config2py.repl_config_getter(key)` will do is:\n",
                 "* search for `key` in your environment variables, and if not found...\n",
-                "* ... search for it in a `config2py` directory (automatically made) of the standard \"app data\" folder of your system (`~/.config` for linus/mac, `$APPDATA` for windows), and if not found...\n",
-                "* ... ask the user to enter the value that key should have, and then put it in the `config2py` directory so it's persisted."
+                "* ... search for it in a default local directory (more on that later), and if not found...\n",
+                "* ... ask the user to enter the value that key should have, and then put it in the local directory mentioned above.\n",
+                "\n",
+                "_Note: The \"... ask the user to enter the value...\" will be activated only when in an interactive environment (python console, jupyter notebook, etc.), as decided by the `config2py.is_repl()` function_"
             ]
         },
         {
@@ -71,8 +73,8 @@
                 }
             ],
             "source": [
-                "repl_config_getter('HOME')  # if you are using Linux/MacOS\n",
-                "# repl_config_getter('USERPROFILE')  # if you are using Windows"
+                "config_getter('HOME')  # if you are using Linux/MacOS\n",
+                "# config_getter('USERPROFILE')  # if you are using Windows"
             ]
         },
         {
@@ -89,7 +91,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "my_config_val = repl_config_getter('_TEST_NON_EXISTING_KEY_')  # triggers a user input dialog\n",
+                "my_config_val = config_getter('_TEST_NON_EXISTING_KEY_')  # triggers a user input dialog\n",
                 "# ... I enter 'my config value' in the dialog, and then..."
             ]
         },
@@ -137,7 +139,7 @@
                 }
             ],
             "source": [
-                "my_config_val = repl_config_getter('_TEST_NON_EXISTING_KEY_')  # does not trigger input dialog\n",
+                "my_config_val = config_getter('_TEST_NON_EXISTING_KEY_')  # does not trigger input dialog\n",
                 "my_config_val"
             ]
         },
@@ -145,7 +147,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "And of course, we give you a means to delete that value, since `repl_config_getter` has a `local_configs` mapping (think `dict`) to the local files where it has been stored. \n",
+                "And of course, we give you a means to delete that value, since `repl_config_getter` has a `configs` mapping (think `dict`) to the local files where it has been stored. \n",
                 "You can do all the usual stuff you do with a `dict` (except the effects will be on local files), \n",
                 "like list the keys (with `list(.)`), get values for a key (with `.[key]`), ask for the number of keys (`len(.)`), and, well, delete stuff:"
             ]
@@ -156,25 +158,98 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "if '_TEST_NON_EXISTING_KEY_' in repl_config_getter.local_configs:\n",
-                "    del repl_config_getter.local_configs['_TEST_NON_EXISTING_KEY_']\n"
+                "if '_TEST_NON_EXISTING_KEY_' in config_getter.configs:\n",
+                "    del config_getter.configs['_TEST_NON_EXISTING_KEY_']\n"
             ]
         },
         {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "This tool allows you to:\n",
+                "Where **is** this configs store actually stored? \n",
+                "Well, you will get to chose, but by default it's in a `config2py` directory (automatically made) of the standard \"app data\" folder of your system (`~/.config` for linux/mac, `$APPDATA` for windows)."
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "So, this tool allows you to:\n",
                 "* not have to set up any special configs stuff (unless you want/need to)\n",
                 "* enables you to share your notebooks (CLIs etc.) with others without having to polute the code with configs-setup gunk...\n",
                 "* ... including when you put local file/folder paths (or worse, secrets) in your notebook or code, which others then have to edit (instead, here, just enter a probably-unique name for the needed resource, then enter your filepath in the user input dialog instead)\n",
                 "\n",
-                "This is very convenient situation where user input (via things like `__builtins__.input` or `getpass.getpass` etc) is available. But **you should not use this to manage configurations/resources anywhere were there's not a user to see and respond to the builtin user input dialog**\n",
+                "This is very convenient situation where user input (via things like `__builtins__.input` or `getpass.getpass` etc) is available. But you should use this only in iteractive situations, **anywhere where there's not a user to see and respond to the builtin user input dialog**\n",
                 "\n",
                 "Don't fret though, this `repl_config_getter` is just our no-BS entry point to much more. \n",
                 "Let's have a slight look under its hood to see what else we can do with it. \n",
                 "\n",
                 "And of course, if you're that type, you can already have a look at [the documentation](https://i2mint.github.io/config2py/)"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "## `simple_config_getter`: Controlling your config_getter a bit more"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "If you look up for the definition of the `config_getter` function you imported above, you'll find this: `config_getter = simple_config_getter()`. \n",
+                "That is, it was created by `simple_config_getter` with its default arguments. \n",
+                "Let's have a look at what these are.\n",
+                "\n",
+                "In fact, `simple_config_getter` is a function to make configuration getters that ressemble the one we've seen above:\n",
+                "\n",
+                "<img width=\"341\" alt=\"image\" src=\"https://github.com/i2mint/config2py/assets/1906276/09f287a8-05f9-4590-8664-10feda9ad617\">\n",
+                "\n",
+                "But where you can control what the central store (by default \"Local App Data Files\" store) is, and whether to first search in environment variables or not, and whether to ask the user for the value, if not found before, or not. "
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 2,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "(configs_src: str = '/Users/thorwhalen/.config/config2py/configs'\n",
+                        " *\n",
+                        " first_look_in_env_vars: bool = True\n",
+                        " ask_user_if_key_not_found: bool = None\n",
+                        " config_store_factory: Callable = <function get_configs_local_store at 0x10a457370>)\n"
+                    ]
+                }
+            ],
+            "source": [
+                "from config2py import simple_config_getter, get_configs_local_store\n",
+                "from i2 import Sig\n",
+                "\n",
+                "print(*str(Sig(simple_config_getter)).split(','), sep='\\n')"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "`first_look_in_env_vars` specifies whether to look into environment variables first, or not.\n",
+                "\n",
+                "`ask_user_if_key_not_found` specifies whether to ask the user if a configuration key is not found. The default is `None`, which will result in checking if you're running in an interactive environment or not. \n",
+                "When you use `config2py` in production though, you should definitely specify `ask_user_if_key_not_found=False` to make that choice explicit.\n",
+                "\n",
+                "The `configs_src` default is automatically set to be the `config2py/configs` folder of your systems's \"App Data\" folder (also configurable via a `CONFIG2PY_APP_DATA_FOLDER` environment variable). \n",
+                "\n",
+                "Your central store will be `config_store_factory(configs_src)`, and since you can also specify `config_store_factory`, you have total control over the store.\n",
+                "\n",
+                "The default `config_store_factory` is `get_configs_local_store` which will give you a locally persisted store where if `configs_src`:\n",
+                "* is a directory, it's assumed to be a folder of text files.\n",
+                "* is a file, it's assumed to be an ini or cfg file.\n",
+                "* is a string, it's assumed to be an app name, from which to create a config folder for with the default method"
             ]
         },
         {
@@ -188,15 +263,17 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "If you check out the code for `repl_config_getter`, you'll find that all it is is:\n",
+                "If you check out the code for `simple_config_getter`, you'll find that all it it is simply setting the `sources` argument for the `get_config` function. \n",
+                "Something more or less like:\n",
                 "\n",
                 "```python\n",
-                "repl_config_getter = get_config(sources=[\n",
+                "configs = config_store_factory(configs_src)\n",
+                "source = [\n",
                 "    os.environ,  # search in environment variables first\n",
-                "    local_configs,  # then search in local_configs\n",
-                "    user_gettable(local_configs)  # if not found, ask the user and store in local_configs\n",
-                "])\n",
-                "repl_config_getter.local_configs = local_configs\n",
+                "    configs,  # then search in configs\n",
+                "    user_gettable(configs)  # if not found, ask the user and store in \n",
+                "]\n",
+                "config_getter = get_config(sources=source)\n",
                 "```\n",
                 "\n",
                 "So you see that you can easily define your own sources for configs, and in what order they should be searched. If you don't want that \"ask the user for the value\" thing, you can just remove the `user_gettable(local_configs)` part. If you wanted instead to add a place to look before the environment variables -- say, you want to look in to local variables of the scope the config getter is **defined** (not called), you can stick `locals()` in front of the `os.environ`."
@@ -443,113 +520,6 @@
                 "from i2 import Sig\n",
                 "\n",
                 "print(*str(Sig(simple_config_getter)).split(','), sep='\\n')"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 2,
-            "metadata": {},
-            "outputs": [
-                {
-                    "data": {
-                        "text/plain": [
-                            "TextFiles(rootdir='/Users/thorwhalen/.config/config2py/configs', subpath='', pattern_for_field=None, max_levels=None, include_hidden=False, assert_rootdir_existence=False)"
-                        ]
-                    },
-                    "execution_count": 2,
-                    "metadata": {},
-                    "output_type": "execute_result"
-                }
-            ],
-            "source": [
-                "config_getter = simple_config_getter()\n",
-                "config_getter.configs"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 11,
-            "metadata": {},
-            "outputs": [
-                {
-                    "data": {
-                        "text/plain": [
-                            "[]"
-                        ]
-                    },
-                    "execution_count": 11,
-                    "metadata": {},
-                    "output_type": "execute_result"
-                }
-            ],
-            "source": [
-                "list(config_getter.configs)"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 14,
-            "metadata": {},
-            "outputs": [
-                {
-                    "data": {
-                        "text/plain": [
-                            "'/Users/thorwhalen'"
-                        ]
-                    },
-                    "execution_count": 14,
-                    "metadata": {},
-                    "output_type": "execute_result"
-                }
-            ],
-            "source": [
-                "config_getter('HOME')  # config_getter looks in env var first"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 11,
-            "metadata": {},
-            "outputs": [
-                {
-                    "data": {
-                        "text/plain": [
-                            "TextFiles(rootdir='/Users/thorwhalen/.config/opus/configs', subpath='', pattern_for_field=None, max_levels=None, include_hidden=False, assert_rootdir_existence=False)"
-                        ]
-                    },
-                    "execution_count": 11,
-                    "metadata": {},
-                    "output_type": "execute_result"
-                }
-            ],
-            "source": [
-                "# want to have a local store for a given app\n",
-                "\n",
-                "config_getter = simple_config_getter('opus')\n",
-                "config_getter.configs"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 13,
-            "metadata": {},
-            "outputs": [
-                {
-                    "data": {
-                        "text/plain": [
-                            "<configparser.ConfigParser object at 0x107833760>"
-                        ]
-                    },
-                    "execution_count": 13,
-                    "metadata": {},
-                    "output_type": "execute_result"
-                }
-            ],
-            "source": [
-                "config_getter = simple_config_getter(\n",
-                "    'SOMEPATH.ini' \n",
-                ")\n",
-                "config_getter.configs"
             ]
         },
         {
