refactor: Rename get_app_data_folder to get_app_config_folder

--- a/misc/config2py - demo.ipynb
+++ b/misc/config2py - demo.ipynb
@@ -339,7 +339,7 @@
                 "* `get_config`: Get a config value from a list of sources. See more below.\n",
                 "* `user_gettable`: Create a ``GettableContainer`` that asks the user for a value, optionally saving it.\n",
                 "* `ask_user_for_input`: Ask the user for input, optionally masking, validating and transforming the input.\n",
-                "* `get_app_data_folder`: Returns the full path of a directory suitable for storing application-specific data for a given app name.\n",
+                "* `get_app_config_folder`: Returns the full path of a directory suitable for storing application-specific data for a given app name.\n",
                 "* `get_configs_local_store`: Get a local store (mapping interface of local files) of configs for a given app or package name\n",
                 "* `configs`: A default local store (mapping interface of local files) for configs.\n",
                 "\n",
